Add Tableau link to the toplinks section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <div class="toplinks">
       <a class="pill" href="https://www.linkedin.com/in/dhiraj-thapa-668304198/" target="_blank">LinkedIn</a>
       <a class="pill" href="https://github.com/dhiraj092" target="_blank">GitHub</a>
+      <a class="pill" href="https://public.tableau.com/app/profile/dhiraj.thapa/vizzes">Tableau</a>
     </div>
 
     <!-- ABOUT -->
