Update subtitle in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="wrap">
 
     <h1>Dhiraj Thapa</h1>
-    <p class="subtitle">Business & Data Analyst | SQL · Excel · Power BI · Python</p>
+    <p class="subtitle">Data Analysis | Market Research | Consumer Behavior | SQL · Excel · Power BI · Python</p>
 
     <div class="toplinks">
       <a class="pill" href="https://www.linkedin.com/in/dhiraj-thapa-668304198/" target="_blank">LinkedIn</a>
