Update image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="grid">
 
         <div class="card">
-          <img src="classic-models.png" alt="Classic Models">
+          <img src=""assets/classic-models.png".png" alt="Classic Models">
           <div class="content">
             <h3>Classic Models – Sales & Financial Analysis</h3>
             <p>End-to-end sales and financial analysis using SQL, Excel, and Power BI.</p>
@@ -88,7 +88,7 @@
         </div>
 
         <div class="card">
-          <img src="stature-leadership.png" alt="Stature Leadership">
+          <img src="assets/stature-leadership.png" alt="Stature Leadership">
           <div class="content">
             <h3>Stature Leadership – Survey Analytics</h3>
             <p>Survey and people analytics supporting leadership alignment decisions.</p>
@@ -100,7 +100,7 @@
         </div>
 
         <div class="card">
-          <img src="grocery-basket.png" alt="Grocery Basket Analysis">
+          <img src="assets/grocery-basket.png" alt="Grocery Basket Analysis">
           <div class="content">
             <h3>Association Rule Mining – Grocery Basket Analysis</h3>
             <p>Market basket analysis to identify product purchase patterns and cross-sell opportunities.</p>
@@ -112,7 +112,7 @@
         </div>
 
         <div class="card">
-          <img src="online-shoppers.png" alt="Online Shoppers Classification">
+          <img src="assets/online-shoppers.pngg" alt="Online Shoppers Classification">
           <div class="content">
             <h3>Classification of Online Shoppers</h3>
             <p>Classification analysis to support prediction of online purchasing behavior.</p>
